--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,24 @@
 
 \documentclass[a4paper,12pt,times,numbered,print,index]{PhDThesisPSnPDF}
 
+
+\usepackage{import}
+
+\usepackage{paralist}
+\usepackage[english]{babel}
+\usepackage{cleveref}
+\usepackage{xstring}
+\usepackage{xcolor}
+\usepackage{mdframed}
+\usepackage{cleveref}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
+%%%%%%%%highlighting 
+\newcommand\note[1]{\textcolor{red}{\bf\em{TODO \: #1}}}
+\newcommand\best[1]{\textcolor{teal}{\bf #1}}
+\newcommand\wow[1]{\textcolorcolor{orange}{\em #1}}
 % ******************************************************************************
 % ******************************* Class Options ********************************
 % *********************** See README for more details **************************
@@ -80,7 +98,7 @@
 
 % ********************************** Preamble **********************************
 % Preamble: Contains packages and user-defined commands and settings
-\input{Preamble/preamble}
+% \input{Preamble/preamble}
 
 % ************************ Thesis Information & Meta-data **********************
 % Thesis title and author information, refernce file for biblatex
@@ -134,15 +152,22 @@
 % ******************************** Main Matter *********************************
 \mainmatter
 
-\include{Chapter1/chapter1}
-\include{Chapter2/chapter2}
-\include{Chapter3/chapter3}
+% \include{Chapter1/chapter1}
+% \include{Chapter2/chapter2}
+% \include{Chapter3/chapter3}
 %\include{Chapter4/chapter4}
 %\include{Chapter5/chapter5}
 %\include{Chapter6/chapter6}
 %\include{Chapter7/chapter7}
 
-
+\input{chapters/introduction}
+\input{chapters/problem_Background}
+\include{chapters/literature/literature_Review}
+\include{chapters/testing/testing}
+\include{chapters/measuring/measuring}
+\include{chapters/optimization/optimization}
+\input{chapters/conclusion}
+\include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are using appendices after References
@@ -151,35 +176,35 @@
 % ********************************** Bibliography ******************************
 \begin{spacing}{0.9}
 
-% To use the conventional natbib style referencing
-% Bibliography style previews: http://nodonn.tipido.net/bibstyle.php
-% Reference styles: http://sites.stat.psu.edu/~surajit/present/bib.htm
+    % To use the conventional natbib style referencing
+    % Bibliography style previews: http://nodonn.tipido.net/bibstyle.php
+    % Reference styles: http://sites.stat.psu.edu/~surajit/present/bib.htm
 
-\bibliographystyle{apalike}
-%\bibliographystyle{unsrt} % Use for unsorted references  
-%\bibliographystyle{plainnat} % use this to have URLs listed in References
-\cleardoublepage
-\bibliography{References/references} % Path to your References.bib file
+    \bibliographystyle{apalike}
+    %\bibliographystyle{unsrt} % Use for unsorted references  
+    %\bibliographystyle{plainnat} % use this to have URLs listed in References
+    \cleardoublepage
+    \bibliography{bibliography} % Path to your References.bib file
 
 
-% If you would like to use BibLaTeX for your references, pass `custombib' as
-% an option in the document class. The location of 'reference.bib' should be
-% specified in the preamble.tex file in the custombib section.
-% Comment out the lines related to natbib above and uncomment the following line.
+    % If you would like to use BibLaTeX for your references, pass `custombib' as
+    % an option in the document class. The location of 'reference.bib' should be
+    % specified in the preamble.tex file in the custombib section.
+    % Comment out the lines related to natbib above and uncomment the following line.
 
-%\printbibliography[heading=bibintoc, title={References}]
+    %\printbibliography[heading=bibintoc, title={References}]
 
 
 \end{spacing}
 
 % ********************************** Appendices ********************************
 
-\begin{appendices} % Using appendices environment for more functunality
+% \begin{appendices} % Using appendices environment for more functunality
 
-\include{Appendix1/appendix1}
-\include{Appendix2/appendix2}
+%     \include{Appendix1/appendix1}
+%     \include{Appendix2/appendix2}
 
-\end{appendices}
+% \end{appendices}
 
 % *************************************** Index ********************************
 \printthesisindex % If index is present
