change the template

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,23 +1,24 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
+\title{Green Coding}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Using the CUED template}
+\subtitle{Software energy optimization by understanding the impact of programming languages}
 
 %% The full name of the author
-\author{Krishna Kumar}
+\author{Mohammed Chakib Belgaid }
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Department of Engineering}
+% \dept{Department of Engineering}
 
 %% University and Crest
-\university{University of Cambridge}
+\university{University of Lille}
 % Crest minimum should be 30mm.
-\crest{\includegraphics[width=0.2\textwidth]{University_Crest}}
+\crest{\includegraphics[width=0.2\textwidth]{Figs/logo-inria}\includegraphics[width=0.2\textwidth]{Figs/logo-univ-lille}\,\includegraphics[width=0.2\textwidth]{Figs/logo-cristal}}
+
 %% Use this crest, if you are using the college crest
 %% Crest long miminum should be 65mm
 %\crest{\includegraphics[width=0.45\textwidth]{University_Crest_Long}}
@@ -29,22 +30,22 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-%\supervisor{Prof. A.B. Supervisor\newline
-%Prof. C.D. Supervisor}
+\supervisor{Pr. Romain Rouvoy \newline
+    Pr. Lionel Seinturier }
 
 %% Supervisor Role (optional) - Supervisor (default) or advisor
-% \supervisorrole{\textbf{Supervisors: }}
+\supervisorrole{\textbf{Supervisors: }}
 %% if no title is desired:
 % \supervisorrole{}
 
 %% Supervisor line width: required to align supervisors
-%\supervisorlinewidth{0.35\textwidth}
+\supervisorlinewidth{0.35\textwidth}
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
-%\advisor{Dr. A. Advisor\newline
-%Dr. B. Advisor}
-     
+% \advisor{Romain Rouvoy \newline
+%     Lionel Seinturier}
+
 %% Advisor Role (optional) - Advisor (default) or leave empty
 % \advisorrole{Advisors: }
 %% if no title is required
@@ -63,12 +64,12 @@
 \degreetitle{Doctor of Philosophy}
 
 %% College affiliation (optional)
-\college{King's College}
+\college{EDSPI}
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
 %\degreedate{September 2014} 
 
 %% Meta information
-\subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {University of
-Cambridge}}
+\subject{LaTeX} \keywords{{Inria} {Software optimization} {programming language} {energy consumption} {PhD Thesis} {Green Computing} {University of
+            Lille}}
