--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index]{PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index,doublelinesep]{PhDThesisPSnPDF}
 
 
 \usepackage{import}
@@ -13,8 +13,17 @@
 \usepackage{xcolor}
 \usepackage{mdframed}
 \usepackage{cleveref}
-
-
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{amsthm}
+% \usepackage{url}
+\usepackage{dirtree}
+\usepackage{multirow}
+\usepackage{array}
+\usepackage{textcomp}
+\usepackage{gensymb}
+\usepackage{siunitx} 
+\usepackage{booktabs} 
 
 %%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
 %%%%%%%%highlighting 
