add : docker vs vm machines

--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
 %%%%%%%%highlighting 
-\newcommand\note[1]{\textcolor{red}{\bf\em{TODO \: #1}}}
+\newcommand\note[1]{\textcolor{red}{\bf\em{TODO : #1}}}
 \newcommand\best[1]{\textcolor{teal}{\bf #1}}
 \newcommand\wow[1]{\textcolorcolor{orange}{\em #1}}
 % ******************************************************************************
