draft. first chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -130,7 +130,7 @@
 % To use choose `chapter' option in the document class
 
 \ifdefineChapter
- \includeonly{Chapter3/chapter3}
+ \includeonly{chapters/testing}
 \fi
 
 % ******************************** Front Matter ********************************
