--- a/thesis.tex
+++ b/thesis.tex
@@ -174,6 +174,7 @@
 \include{chapters/literature/literature_Review}
 \include{chapters/testing/testing}
 \include{chapters/programming_languages/programming_languages}
+\include{chapters/execution_environement/execution_environement}
 
 \input{chapters/conclusion}
 \include{chapters/appendices/appendices} % Appendices
