--- a/thesis.tex
+++ b/thesis.tex
@@ -194,7 +194,7 @@
     %\bibliographystyle{unsrt} % Use for unsorted references  
     %\bibliographystyle{plainnat} % use this to have URLs listed in References
     \cleardoublepage
-    \bibliography{bibliography} % Path to your References.bib file
+    \bibliography{final_library} % Path to your References.bib file
 
 
     % If you would like to use BibLaTeX for your references, pass `custombib' as
