add: python grpahs

--- a/final_library.bib
+++ b/final_library.bib
@@ -1361,7 +1361,7 @@ the structure of the paper :
   doi = {10.1109/E2SC.2014.13},
   abstract = {Accurate and fine-grained power measurements of computing systems are essential for energy-aware performance optimizations of HPC systems and applications. Although cluster wide instrumentation options are available, fine spatial granularity and temporal resolution are not supported by the system vendors and extra hardware is needed to capture the power consumption information. We introduce the High Definition Energy Efficiency Monitoring (HDEEM) infrastructure, a sophisticated approach towards systemwide and fine-grained power measurements that enable energy-aware performance optimizations of parallel codes. Our approach is targeted at instrumenting multiple HPC racks with power sensors that have a sampling rate of about 8 kSa/s as well as finer spatial granularity, e.g., for per-CPU measurements. We specifically focus on the correctness of power measurement samples and energy consumption calculations based on these power samples. We also discuss scalable and low-overhead or overhead-free options for online and offline (post-mortem) processing of power measurement data.},
   keywords = {Accuracy,Current measurement,Energy consumption,Energy measurement,Power demand,Power measurement,Sensors},
-  file = {/Users/chakibbelgaid/Zotero/storage/P87MLMXA/Hackenberg et al. - 2014 - HDEEM High Definition Energy Efficiency Monitorin.pdf}
+  file = {/Users/chakibbelgaid/Zotero/storage/P87MLMXA/Hackenberg et al. - 2014 - HDEEM High Definition Energy Efficiency Monitorin.pdf;/Users/chakibbelgaid/Zotero/storage/WT9435V9/7016382.html}
 }
 
 @inproceedings{hackenberg2013power,
