--- a/final_library.bib
+++ b/final_library.bib
@@ -2803,16 +2803,17 @@ Collections- Introducing the main study field
   langid = {english}
 }
 
-@phdthesis{ournani_software_2021,
-  title = {Software {{Eco-Design}}: {{Investigating}} and {{Reducing}} the {{Energy Consumption}} of {{Software}}},
-  shorttitle = {Software {{Eco-Design}}},
+@phdthesis{ournani_software_2021-1,
+  type = {Theses},
+  title = {Software Eco-Design : Investigating and Reducing the Energy Consumption of Software},
+  shorttitle = {Software Eco-Design},
   author = {Ournani, Zakaria},
   year = {2021},
   month = nov,
-  abstract = {Energy consumption is an emerging concern in multiple domains and fields, including ICT and data centers. In fact, the energy consumption of data centers has drastically increased in the last decade for both hardware and software entities, especially due to the democratization of cloud services and the huge amount of transiting data. Formerly, The energy consumption was mainly related to the used hardware, and its capacity to maintain a low power consumption while achieving tasks. However, the running software is in fact as important as hardware, and is as responsible for very substantial gains or drawbacks in energy consumption. The ultimate goal of this thesis is to help developers and practitioners understand and actively think about green software design in their work, in order to reduce the energy consumption of their software and deliver energy efficient products. We thus contribute to supplement green software design knowledge.. To achieve this, we start with conducting a qualitative study with developers, to discuss the multiple hurdles they are facing and their requirements to promote green software design within companies. To reduce software energy consumption, practitioners have to measure it and track its evolution first. In our second contribution we investigate the problem of energy consumption variations. We provide guidelines on controllable factors that one could easily tune to reduce this variation and conduct steady and reproducible energy measurements. Once practitioners are able to measure the energy consumption of their software, they can work on reducing it and produce energy efficient software. Thus, this thesis delivers 3 more contributions, focusing on the Java language. The first contribution aims at helping developers choose and configure their execution environment. We identified substantial differences in energy consumption using multiple JVM platforms with different JIT and GC configurations for different use cases. The second and third contributions study the impact on energy consumption of small changes that developers often apply on their source code (code refactoring and API/methods substitutions respectively). We show through these studies that structure oriented code refactorings do not substantially alter software energy consumption. On the other hand, Java I/O methods substitution drastically changed the energy consumption depending on the use case. This thesis contributes to enrich the knowledge on green software design and provides insights and approaches to enhance the energy efficiency at multiple levels of software development.},
-  langid = {english},
-  school = {University of Lille},
-  file = {/Users/chakibbelgaid/Zotero/storage/ZKMQ94WX/Ournani - 2021 - Software Eco-Design Investigating and Reducing th.pdf;/Users/chakibbelgaid/Zotero/storage/AQCIEJFF/tel-03429300.html}
+  number = {2021LILUB018},
+  school = {Universit\'e de Lille},
+  keywords = {Energy efficiency,Green refactoring,Green software design,Logiciels verts,Réusinage de code,Software energy consumption},
+  file = {/Users/chakibbelgaid/Zotero/storage/SSN9R7E4/Ournani - 2021 - Software eco-design  investigating and reducing t.pdf}
 }
 
 @book{padala_virtualization_2018-1,
