--- a/thesis.tex
+++ b/thesis.tex
@@ -196,13 +196,13 @@
 
 
 
-\input{chapters/introduction}
+% \input{chapters/introduction}
 \include{chapters/literature/literature_Review}
 \include{chapters/benchmarking/benchmarking}
-\include{chapters/programming_languages/programming_languages}
-\include{chapters/optimization/optimization}
-\input{chapters/conclusion}
-\include{chapters/appendices/appendices} % Appendices
+% \include{chapters/programming_languages/programming_languages}
+% \include{chapters/optimization/optimization}
+% \input{chapters/conclusion}
+% \include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are usPing appendices after References
