add : introduction to soa chapter

--- a/final_library.bib
+++ b/final_library.bib
@@ -2440,6 +2440,13 @@ Comment: Part of the Proceedings of the 6th European Conference on Python in Sci
   langid = {english}
 }
 
+@misc{noauthor_pypl_nodate,
+  title = {{{PYPL PopularitY}} of {{Programming Language}} Index},
+  abstract = {PYPL popularity of programming language},
+  langid = {english},
+  file = {/Users/chakibbelgaid/Zotero/storage/PM6RVNHQ/PYPL.html}
+}
+
 @misc{noauthor_python_2019,
   title = {Python {{Developers Survey}} 2017 - {{Results}}},
   year = {2019},
@@ -2719,7 +2726,6 @@ Collections- Introducing the main study field
 \par
 - categorizing them with the characteristics of each category~},
   file = {/Users/chakibbelgaid/Zotero/storage/YMZ2D2UV/Oliveira et al. - Recommending Energy-Efﬁcient Java Collections.pdf}
-
 }
 
 @inproceedings{opaper,
@@ -3661,25 +3667,3 @@ Comment: In the 57th Annual Meeting of the Association for Computational Linguis
 }
 
 
-
-@article{andrae2015global,
-  title={On global electricity usage of communication technology: trends to 2030},
-  author={Andrae, Anders SG and Edler, Tomas},
-  journal={Challenges},
-  volume={6},
-  number={1},
-  pages={117--157},
-  year={2015},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@article{avgerinou2017trends,
-  title={Trends in data centre energy consumption under the european code of conduct for data centre energy efficiency},
-  author={Avgerinou, Maria and Bertoldi, Paolo and Castellazzi, Luca},
-  journal={Energies},
-  volume={10},
-  number={10},
-  pages={1470},
-  year={2017},
-  publisher={MDPI}
-}
