--- a/thesis.tex
+++ b/thesis.tex
@@ -198,10 +198,10 @@
 
 \input{chapters/introduction}
 \include{chapters/literature/literature_Review}
-\include{chapters/benchmarking/benchmarking}
-\include{chapters/programming_languages/programming_languages}
-\include{chapters/optimization/optimization}
-\input{chapters/conclusion}
+% \include{chapters/benchmarking/benchmarking}
+% \include{chapters/programming_languages/programming_languages}
+% \include{chapters/optimization/optimization}
+% \input{chapters/conclusion}
 % \include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
@@ -219,7 +219,7 @@
   %\bibliographystyle{unsrt} % Use for unsorted references  
   %\bibliographystyle{plainnat} % use this to have URLs listed in References
   \cleardoublepage
-  \bibliography{final_library} % Path to your References.bib file
+  \bibliography{static_final_library} % Path to your References.bib file
 
 
   % If you would like to use BibLaTeX for your references, pass `custombib' as
