--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -4029,3 +4029,14 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   year={2015},
   organization={IEEE}
 }
+
+@article{avgerinou2017trends,
+  title={Trends in data centre energy consumption under the european code of conduct for data centre energy efficiency},
+  author={Avgerinou, Maria and Bertoldi, Paolo and Castellazzi, Luca},
+  journal={Energies},
+  volume={10},
+  number={10},
+  pages={1470},
+  year={2017},
+  publisher={MDPI}
+}
