add : soa software tools

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -4040,3 +4040,11 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   year={2017},
   publisher={MDPI}
 }
+
+@inproceedings{jagroep2015profiling,
+  title={Profiling energy profilers},
+  author={Jagroep, Erik and van der Werf, Jan Martijn EM and Jansen, Slinger and Ferreira, Miguel and Visser, Joost},
+  booktitle={Proceedings of the 30th annual ACM symposium on applied computing},
+  pages={2198--2203},
+  year={2015}
+}
