--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -4048,3 +4048,19 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   pages={2198--2203},
   year={2015}
 }
+
+@inproceedings{pradeep2019pragmatic,
+  title={A pragmatic evaluation of stress and performance testing technologies for web based applications},
+  author={Pradeep, S and Sharma, Yogesh Kumar},
+  booktitle={2019 Amity International Conference on Artificial Intelligence (AICAI)},
+  pages={399--403},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{king2017stress,
+  title={Stress-ng},
+  author={King, Colin Ian},
+  journal={URL: http://kernel. ubuntu. com/git/cking/stressng. git/(visited on 28/03/2018)},
+  year={2017}
+}
