fix : bug where i cant add references

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -3243,6 +3243,40 @@ Conclusion: The results from this and similar studies could be used to augment I
 	address = {New York, NY, USA},
 }
 
+@article{hankins1986debate,
+  title={A Debate over Experiment: Leviathan and the Air-Pump. Hobbes, Boyle, and the Experimental Life. Steven Shapin and Simon Schaffer. Including a translation of Hobbes's Dialogus physicus de natura aeris by Simon Schaffer. Princeton University Press, Princeton, NJ, 1985. xiv, 442 pp., illus. 60.},
+  author={Hankins, Thomas L},
+  journal={Science},
+  volume={232},
+  number={4753},
+  pages={1040--1042},
+  year={1986},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{allison2018reproducibility,
+  title={Reproducibility of research: Issues and proposed remedies},
+  author={Allison, David B and Shiffrin, Richard M and Stodden, Victoria},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={11},
+  pages={2561--2562},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+
+@article{brown2018issues,
+  title={Issues with data and analyses: Errors, underlying themes, and potential solutions},
+  author={Brown, Andrew W and Kaiser, Kathryn A and Allison, David B},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={11},
+  pages={2563--2570},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
 @inproceedings{renaissance,
 	author = {Prokopec, Aleksandar and Ros\`{a}, Andrea and Leopoldseder, David and Duboscq, Gilles and T\r{u}ma, Petr and Studener, Martin and Bulej, Lubom\'{\i}r and Zheng, Yudi and Villaz\'{o}n, Alex and Simon, Doug and W\"{u}rthinger, Thomas and Binder, Walter},
 	title = {Renaissance: Benchmarking Suite for Parallel Applications on the JVM},
@@ -4057,10 +4091,32 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   year={2019},
   organization={IEEE}
 }
+@article{stodden2018empirical,
+  title={An empirical analysis of journal policy effectiveness for computational reproducibility},
+  author={Stodden, Victoria and Seiler, Jennifer and Ma, Zhaokun},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={11},
+  pages={2584--2589},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
 
 @article{king2017stress,
   title={Stress-ng},
   author={King, Colin Ian},
   journal={URL: http://kernel. ubuntu. com/git/cking/stressng. git/(visited on 28/03/2018)},
   year={2017}
+}
+
+@article{patil2018training,
+  title={Training replicable predictors in multiple studies},
+  author={Patil, Prasad and Parmigiani, Giovanni},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={11},
+  pages={2578--2583},
+  year={2018},
+  publisher={National Acad Sciences}
 }
