--- a/final_library.bib
+++ b/final_library.bib
@@ -2542,6 +2542,15 @@ usage in cloud~
   abstract = {Results of the official Python Developers Survey 2018 by Python Software Foundation and JetBrains: more than 20k responses from more than 150 countries.}
 }
 
+@misc{noauthor_reproducibility_nodate,
+  title = {Reproducibility of Research: {{Issues}} and Proposed Remedies},
+  shorttitle = {Reproducibility of Research},
+  doi = {10.1073/pnas.1802324115},
+  howpublished = {https://www.pnas.org/doi/10.1073/pnas.1802324115},
+  langid = {english},
+  file = {/Users/chakibbelgaid/Zotero/storage/FAJ3D8BR/Reproducibility of research Issues and proposed r.pdf;/Users/chakibbelgaid/Zotero/storage/NAWUSAL3/pnas.html}
+}
+
 @misc{noauthor_reproducible_nodate,
   title = {Reproducible {{Research}} in {{Computational Science}} | {{Science}}},
   howpublished = {https://science.sciencemag.org/content/334/6060/1226.abstract}
