refactoring : revert the changes for the benchmarking protocol chapter

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -4120,3 +4120,10 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   year={2018},
   publisher={National Acad Sciences}
 }
+
+@article{van2016power,
+  title={Power efficiency of hypervisor-based virtualization versus container-based virtualization},
+  author={van Kessel, Jeroen and Taal, Arie and Grosso, Paola},
+  journal={University of Amsterdam},
+  year={2016}
+}
