add : experemental setup for the ml experiment

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -4127,3 +4127,11 @@ bibsource = {dblp computer science bibliography, https://dblp.org}
   journal={University of Amsterdam},
   year={2016}
 }
+
+@inproceedings{o2008object,
+  title={Object/relational mapping 2008: hibernate and the entity data model (edm)},
+  author={O'Neil, Elizabeth J},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={1351--1356},
+  year={2008}
+}
