--- a/thesis.tex
+++ b/thesis.tex
@@ -33,6 +33,7 @@
 %%%%%%%%highlighting 
 \newcommand\note[1]{\textcolor{red}{\bf\em{TODO : #1}}}
 \newcommand\best[1]{\textcolor{teal}{\bf #1}}
+\newcommand\worst[1]{\textcolor{red}{\bf #1}}
 \newcommand\same[1]{\textcolor{orange}{ \em #1}}
 \newcommand\wow[1]{\textcolorcolor{orange}{\em #1}}
 \newcommand\yes[0]{\checkmark}
