--- a/thesis.tex
+++ b/thesis.tex
@@ -198,15 +198,15 @@
 
 
 
-\input{chapters/introduction}
-\include{chapters/literature/literature_Review}
-\part{Benchmarking Programming Technologies}
-\include{chapters/benchmarking/benchmarking}
-\include{chapters/programming_languages/programming_languages}
-\part{Optimizing Application Runtimes}
+% \input{chapters/introduction}
+% \include{chapters/literature/literature_Review}
+% \part{Benchmarking Programming Technologies}
+% \include{chapters/benchmarking/benchmarking}
+% \include{chapters/programming_languages/programming_languages}
+% \part{Optimizing Application Runtimes}
 \include{chapters/optimization/optimization}
-\input{chapters/conclusion}
-\include{chapters/appendices/appendices} % Appendices
+% \input{chapters/conclusion}
+% \include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are usPing appendices after References
