fix : notes that were hilighlted by Lionel

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1,4 +1,5 @@
 
+% TODO : ADD the missing references 
 @inproceedings{abtahizadeh_how_2015,
   title = {How Green Are Cloud Patterns?},
   author = {Abtahizadeh, S. Amirhossein and Khomh, Foutse and Gueheneuc, Yann-Gael},
