--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -14,7 +14,16 @@
 	abstract     = {Garbage collection is an element of many contemporary software platforms whose performance is determined by complex interactions and is therefore difficult to quantify and model. We investigate the difference between the behavior of a real garbage collector implementation and a simplified model on a selection of workloads, focusing on the accuracy achievable with particular input information (sizes, references, lifetimes). Our work highlights the limits of performance modeling of garbage collection and points out issues of existing evaluation tools that may lead to incorrect experimental conclusions.},
 	numpages     = 12,
 	keywords     = {garbage collector, performance modeling, java}
+}@article{zar2005spearman,
+  title={Spearman rank correlation},
+  author={Zar, Jerrold H},
+  journal={Encyclopedia of biostatistics},
+  volume={7},
+  year={2005},
+  publisher={Wiley Online Library}
 }
+
+
 @inproceedings{10.1145/2989081.2989088,
 	title        = {A Validation of DRAM RAPL Power Measurements},
 	author       = {Desrochers, Spencer and Paradis, Chad and Weaver, Vincent M.},
