update : benhcmarking soa

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -447,6 +447,22 @@
 	langid       = {french},
 	file         = {/Users/chakibbelgaid/Zotero/storage/GYPHLZIM/Boulet - Typographie scientifique.pdf}
 }
+@inproceedings{blackburn2006dacapo,
+  title={The DaCapo benchmarks: Java benchmarking development and analysis},
+  author={Blackburn, Stephen M and Garner, Robin and Hoffmann, Chris and Khang, Asjad M and McKinley, Kathryn S and Bentzur, Rotem and Diwan, Amer and Feinberg, Daniel and Frampton, Daniel and Guyer, Samuel Z and others},
+  booktitle={Proceedings of the 21st annual ACM SIGPLAN conference on Object-oriented programming systems, languages, and applications},
+  pages={169--190},
+  year={2006}
+}
+
+@inproceedings{prokopec2019renaissance,
+  title={Renaissance: benchmarking suite for parallel applications on the JVM},
+  author={Prokopec, Aleksandar and Ros{\`a}, Andrea and Leopoldseder, David and Duboscq, Gilles and T{\uu}ma, Petr and Studener, Martin and Bulej, Lubom{\'\i}r and Zheng, Yudi and Villaz{\'o}n, Alex and Simon, Doug and others},
+  booktitle={Proceedings of the 40th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages={31--47},
+  year={2019}
+}
+
 @article{boulet_typographie_nodate-1,
 	title        = {{Typographie g\'en\'erale}},
 	author       = {Boulet, Pierre},
@@ -454,6 +470,18 @@
 	langid       = {french},
 	file         = {/Users/chakibbelgaid/Zotero/storage/MKZBSR3J/Boulet - Typographie générale.pdf}
 }
+
+@article{omair2014sample,
+  title={Sample size estimation and sampling techniques for selecting a representative sample},
+  author={Omair, Aamir and others},
+  journal={Journal of Health specialties},
+  volume={2},
+  number={4},
+  pages={142},
+  year={2014},
+  publisher={Medknow Publications and Media Pvt. Ltd.}
+}
+
 @article{bourdon:hal-00772454,
 	title        = {{PowerAPI: A Software Library to Monitor the Energy Consumed at the Process-Level}},
 	author       = {Bourdon, Aur{\'e}lien and Noureddine, Adel and Rouvoy, Romain and Seinturier, Lionel},
