update : soa / energy measurement

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -455,13 +455,7 @@
   year={2006}
 }
 
-@inproceedings{prokopec2019renaissance,
-  title={Renaissance: benchmarking suite for parallel applications on the JVM},
-  author={Prokopec, Aleksandar and Ros{\`a}, Andrea and Leopoldseder, David and Duboscq, Gilles and T{\uu}ma, Petr and Studener, Martin and Bulej, Lubom{\'\i}r and Zheng, Yudi and Villaz{\'o}n, Alex and Simon, Doug and others},
-  booktitle={Proceedings of the 40th ACM SIGPLAN Conference on Programming Language Design and Implementation},
-  pages={31--47},
-  year={2019}
-}
+
 
 @article{boulet_typographie_nodate-1,
 	title        = {{Typographie g\'en\'erale}},
@@ -2848,7 +2842,7 @@
 }
 @inproceedings{renaissance,
 	title        = {Renaissance: Benchmarking Suite for Parallel Applications on the JVM},
-	author       = {Prokopec, Aleksandar and Ros\`{a}, Andrea and Leopoldseder, David and Duboscq, Gilles and T\r{u}ma, Petr and Studener, Martin and Bulej, Lubom\'{\i}r and Zheng, Yudi and Villaz\'{o}n, Alex and Simon, Doug and W\"{u}rthinger, Thomas and Binder, Walter},
+	author       = {Prokopec, Aleksandar and Rosa, Andrea and Leopoldseder, David and Duboscq, Gilles and Truma, Petr and Studener, Martin and Bulej, Lubomir and Zheng, Yudi and Villazon, Alex and Simon, Doug and Wurthinger, Thomas and Binder, Walter},
 	year         = 2019,
 	booktitle    = {Proceedings of the 40th ACM SIGPLAN Conference on Programming Language Design and Implementation},
 	location     = {Phoenix, AZ, USA},
