add : execution environment soa

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -2047,7 +2047,7 @@
 	pages        = {115--122},
 	organization = {Association for Computational Creativity}
 }
-@article{mishra2018energy,
+@article{mishra_energy_2018,
 	title        = {Energy-efficient VM-placement in cloud data center},
 	author       = {Mishra, Sambit Kumar and Puthal, Deepak and Sahoo, Bibhudatta and Jayaraman, Prem Prakash and Jun, Song and Zomaya, Albert Y and Ranjan, Rajiv},
 	year         = 2018,
