add : java defition

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1847,6 +1847,25 @@
 	year         = 2018,
 	booktitle    = {27th {USENIX} Security Symposium ({USENIX} Security 18)}
 }
+
+@inproceedings{shiv2009specjvm2008,
+  title={SPECjvm2008 performance characterization},
+  author={Shiv, Kumar and Chow, Kingsum and Wang, Yanping and Petrochenko, Dmitry},
+  booktitle={SPEC Benchmark Workshop},
+  pages={17--35},
+  year={2009},
+  organization={Springer}
+}
+
+@inproceedings{oi_power_2011,
+  title={Power-performance analysis of JVM implementations},
+  author={Oi, Hitoshi},
+  booktitle={ICIMU 2011: Proceedings of the 5th international Conference on Information Technology \& Multimedia},
+  pages={1--7},
+  year={2011},
+  organization={IEEE}
+}
+
 @incollection{liu_data-oriented_2015,
 	title        = {Data-{{Oriented Characterization}} of {{Application}}-{{Level Energy Optimization}}},
 	author       = {Liu, Kenan and Pinto, Gustavo and Liu, Yu David},
