update : some references

--- a/static_final_library copy.bib
+++ b/static_final_library copy.bib
@@ -1264,6 +1264,27 @@ havoc stress
   file = {/Users/chakibbelgaid/Zotero/storage/PMUNDEK3/pyston-v2-20-faster-python.html}
 }
 
+@article{vasques2019review,
+  title={A review on energy efficiency and demand response with focus on small and medium data centers},
+  author={Vasques, Thiago Lara and Moura, Pedro and de Almeida, An{\'\i}bal},
+  journal={Energy Efficiency},
+  volume={12},
+  number={5},
+  pages={1399--1428},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{wang2018modelling,
+  title={Modelling and developing conflict-aware scheduling on large-scale data centres},
+  author={Wang, Bin and Chen, Chao and He, Ligang and Gao, Bo and Ren, Jiadong and Fu, Zhangjie and Fu, Songling and Hu, Yongjian and Li, Chang-Tsun},
+  journal={Future Generation Computer Systems},
+  volume={86},
+  pages={995--1007},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @inproceedings{morabito_power_2015,
   title = {Power {{Consumption}} of {{Virtualization Technologies}}: An {{Empirical Investigation}}},
   shorttitle = {Power {{Consumption}} of {{Virtualization Technologies}}},
