--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,15 +1,20 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Green Coding}
+\title{Studying the Impact of Programming~Frameworks on the Energy~Consumption of Software~Services}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Software energy optimization by understanding the impact of programming languages}
+% \subtitle{}
+\crest{
+    \includegraphics[width=.3\linewidth]{Figs/logo-inria}\,
+    \includegraphics[width=.3\linewidth]{Figs/logo-univ-lille}\,
+    \includegraphics[width=.3\linewidth]{Figs/logo-cristal}
+}
 
 %% The full name of the author
-\author{Mohammed Chakib Belgaid }
+\author{\emph{Mohammed Chakib} \textsc{Belgaid}}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 % \dept{Department of Engineering}
@@ -17,7 +22,6 @@
 %% University and Crest
 \university{University of Lille}
 % Crest minimum should be 30mm.
-\crest{\includegraphics[width=0.2\textwidth]{Figs/logo-inria}\includegraphics[width=0.2\textwidth]{Figs/logo-univ-lille}\,\includegraphics[width=0.2\textwidth]{Figs/logo-cristal}}
 
 %% Use this crest, if you are using the college crest
 %% Crest long miminum should be 65mm
@@ -30,8 +34,8 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-\supervisor{Pr. Romain Rouvoy \newline
-    Pr. Lionel Seinturier }
+\supervisor{Pr. \emph{Romain} \textsc{Rouvoy}, \newline
+    Pr. \emph{Lionel} \textsc{Seinturier}}
 
 %% Supervisor Role (optional) - Supervisor (default) or advisor
 \supervisorrole{\textbf{Supervisors: }}
@@ -39,7 +43,7 @@
 % \supervisorrole{}
 
 %% Supervisor line width: required to align supervisors
-\supervisorlinewidth{0.35\textwidth}
+\supervisorlinewidth{0.45\textwidth}
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
@@ -64,7 +68,7 @@
 \degreetitle{Doctor of Philosophy}
 
 %% College affiliation (optional)
-\college{EDSPI}
+\college{\'Ecole Doctorale MADIS}
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
