--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -24,6 +24,17 @@
 }
 
 
+@article{hochman1969pareto,
+  title={Pareto optimal redistribution},
+  author={Hochman, Harold M and Rodgers, James D},
+  journal={The American economic review},
+  volume={59},
+  number={4},
+  pages={542--557},
+  year={1969},
+  publisher={JSTOR}
+}
+
 @inproceedings{10.1145/2989081.2989088,
 	title        = {A Validation of DRAM RAPL Power Measurements},
 	author       = {Desrochers, Spencer and Paradis, Chad and Weaver, Vincent M.},
