--- a/thesis.tex
+++ b/thesis.tex
@@ -31,7 +31,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
 %%%%%%%%highlighting 
-\newcommand\note[1]{\textcolor{red}{\bf\em{TODO : #1}}}
+\newcommand\note[1]{\textcolor{red}{\bf\emph{TODO : #1}}}
 \newcommand\best[1]{\textcolor{teal}{\bf #1}}
 \newcommand\worst[1]{\textcolor{red}{\bf #1}}
 \newcommand\same[1]{\textcolor{orange}{ \em #1}}
