fix: missing references

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1305,6 +1305,16 @@
    note = "[Online; accessed 17-September-2022]"
  }
 
+@article{wang2018modelling,
+  title={Modelling and developing conflict-aware scheduling on large-scale data centres},
+  author={Wang, Bin and Chen, Chao and He, Ligang and Gao, Bo and Ren, Jiadong and Fu, Zhangjie and Fu, Songling and Hu, Yongjian and Li, Chang-Tsun},
+  journal={Future Generation Computer Systems},
+  volume={86},
+  pages={995--1007},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @incollection{grid5000,
 	title        = {Adding Virtualization Capabilities to the {Grid'5000} Testbed},
 	author       = {Balouek, Daniel and Carpen Amarie, Alexandra and Charrier, Ghislain and Desprez, Fr{\'e}d{\'e}ric and Jeannot, Emmanuel and Jeanvoine, Emmanuel and L{\`e}bre, Adrien and Margery, David and Niclausse, Nicolas and Nussbaum, Lucas and Richard, Olivier and P{\'e}rez, Christian and Quesnel, Flavien and Rohr, Cyril and Sarzyniec, Luc},
@@ -1847,6 +1857,17 @@
 	year         = 2005,
 	publisher    = {Cambridge university press}
 }
+@article{vasques2019review,
+  title={A review on energy efficiency and demand response with focus on small and medium data centers},
+  author={Vasques, Thiago Lara and Moura, Pedro and de Almeida, An{\'\i}bal},
+  journal={Energy Efficiency},
+  volume={12},
+  number={5},
+  pages={1399--1428},
+  year={2019},
+  publisher={Springer}
+}
+
 @inproceedings{linares-vasquez_mining_2014,
 	title        = {Mining Energy-Greedy {{API}} Usage Patterns in {{Android}} Apps: An Empirical Study},
 	shorttitle   = {Mining Energy-Greedy {{API}} Usage Patterns in {{Android}} Apps},
