--- a/thesis.tex
+++ b/thesis.tex
@@ -200,10 +200,10 @@
 
 \input{chapters/introduction}
 \include{chapters/literature/literature_Review}
-\part{Benchmarking Programming Technologies}
+% \part{Benchmarking Programming Technologies}
 \include{chapters/benchmarking/benchmarking}
 \include{chapters/programming_languages/programming_languages}
-\part{Optimizing Application Runtimes}
+% \part{Optimizing Application Runtimes}
 \include{chapters/optimization/optimization}
 \input{chapters/conclusion}
 \include{chapters/appendices/appendices} % Appendices
