fix : missing references

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1305,6 +1305,13 @@
    note = "[Online; accessed 17-September-2022]"
  }
 
+@inproceedings{rubinsteyn2012parakeet,
+  title={Parakeet: A $\{$Just-In-Time$\}$ Parallel Accelerator for Python},
+  author={Rubinsteyn, Alex and Hielscher, Eric and Weinman, Nathaniel and Shasha, Dennis},
+  booktitle={4th USENIX Workshop on Hot Topics in Parallelism (HotPar 12)},
+  year={2012}
+}
+
 @article{wang2018modelling,
   title={Modelling and developing conflict-aware scheduling on large-scale data centres},
   author={Wang, Bin and Chen, Chao and He, Ligang and Gao, Bo and Ren, Jiadong and Fu, Zhangjie and Fu, Songling and Hu, Yongjian and Li, Chang-Tsun},
@@ -2483,7 +2490,7 @@
 	keywords     = {Application software,computer languages,Embedded software,high level languages,High level languages,high-level language,Internet,Libraries,Prototypes,Python,scientific codes,scientific computing,Scientific computing,scientific programming,Software standards,Standards development,steering language,Writing},
 	file         = {/Users/chakibbelgaid/Zotero/storage/4I2U5KQR/Oliphant - 2007 - Python for Scientific Computing.pdf;/Users/chakibbelgaid/Zotero/storage/FUZR4AFP/4160250.html}
 }
-@article{oliveira_recommending_nodate,
+@article{oliveira_recommending,
 	title        = {Recommending {{Energy}}-{{Efficient Java Collections}}},
 	author       = {Oliveira, Wellington and Oliveira, Renato and Castor, Fernando and Fernandes, Benito and Pinto, Gustavo},
 	pages        = 11,
