--- a/thesis.tex
+++ b/thesis.tex
@@ -25,8 +25,10 @@
 \usepackage{siunitx} 
 \usepackage{booktabs} 
 \usepackage{pgf}
+\usepackage{enumitem}
 \usepackage{longtable}
 \usepackage{listing}
+\usepackage{algorithm,algpseudocode}
 \usepackage[abspath]{currfile}
 
 %%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
