update : python insights

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -24,6 +24,10 @@
 }
 
 
+@article{editiondiscrete,
+  title={Discrete Mathematics and Its Applications},
+  author={Edition, Seventh and Rosen, Kenneth H}
+}
 
 
 @article{hochman1969pareto,
